--- a/.env
+++ b/.env
@@ -26,5 +26,5 @@ APP_SECRET=ecf1f5819040bb8139b054b8d297b5f6
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:root@127.0.0.1:5432/winker?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://app:root@localhost:5432/winker?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
