--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "easycorp/easyadmin-bundle": "^4.8",
         "runtime/frankenphp-symfony": "dev-main",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
