--- a/compose.yaml
+++ b/compose.yaml
@@ -41,6 +41,8 @@ services:
 ###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-15}-alpine
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-winker}
       # You should definitely change the password in production
