--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "7.0.*",
-        "symfony/yaml": "7.0.*"
+        "symfony/security-bundle": "7.0.*",
+        "symfony/webpack-encore-bundle": "^2.1",
+        "symfony/yaml": "7.0.*",
+        "symfonycasts/verify-email-bundle": "^1.15"
     },
     "config": {
         "allow-plugins": {
@@ -73,6 +76,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.5",
         "symfony/debug-bundle": "7.0.*",
         "symfony/maker-bundle": "^1.52",
         "symfony/stopwatch": "7.0.*",
