--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,33 @@
 security:
+    role_hierarchy:
+        ROLE_CUSTOMER: ROLE_USER
+        ROLE_CEO: ROLE_CUSTOMER
+        ROLE_ADMIN: ROLE_CEO
+        ROLE_SUPER_ADMIN: [ ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
-
+            provider: app_user_provider
+            form_login:
+                # "app_login" is the name of the route created previously
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
+            logout:
+                path: app_logout
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -22,8 +37,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+#         - { path: ^/admin/users, roles: ROLE_SUPER_ADMIN }
+         - { path: ^/admin/login, roles: PUBLIC_ACCESS }
+         - { path: ^/admin, roles: [IS_AUTHENTICATED_FULLY, ROLE_CUSTOMER]   }
         # - { path: ^/profile, roles: ROLE_USER }
+#         - { path: ^/api/(post|comment)/\d+$, roles: ROLE_USER }
 
 when@test:
     security:
