--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    App\EventListener\LogoutSubscriber:
+        tags:
+            -   name: kernel.event_subscriber
+                dispatcher: security.event_dispatcher.main
