--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -6,8 +6,9 @@ doctrine:
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         server_version: '15'
-
+        wrapper_class: App\Doctrine\DynamicConnection
         profiling_collect_backtrace: '%kernel.debug%'
+        
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
