--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
         "easycorp/easyadmin-bundle": "^4.8",
+        "lexik/jwt-authentication-bundle": "^2.20",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
@@ -34,7 +35,13 @@
         "symfony/validator": "7.0.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "7.0.*",
-        "symfonycasts/verify-email-bundle": "^1.15"
+        "symfonycasts/verify-email-bundle": "^1.15",
+        "web-token/jwt-bundle": "^3.2",
+        "web-token/jwt-checker": "^3.2",
+        "web-token/jwt-encryption-algorithm-aesgcm": "^3.1.2",
+        "web-token/jwt-encryption-algorithm-rsa": "^3.1.2",
+        "web-token/jwt-key-mgmt": "^3.2",
+        "web-token/jwt-signature-algorithm-rsa": "^3.1.2"
     },
     "config": {
         "allow-plugins": {
@@ -83,7 +90,11 @@
         "symfony": {
             "allow-contrib": false,
             "require": "7.0.*",
-            "docker": true
+            "docker": true,
+            "endpoint": [
+                "https://api.github.com/repos/Spomky-Labs/recipes/contents/index.json?ref=main",
+                "flex://defaults"
+            ]
         }
     },
     "require-dev": {
