--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,22 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                username_path: email
+                password_path: password
+
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
+        
         main:
             lazy: true
             provider: app_user_provider
@@ -33,13 +49,16 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
-
+        
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
 #         - { path: ^/admin/users, roles: ROLE_SUPER_ADMIN }
          - { path: ^/admin/login, roles: PUBLIC_ACCESS }
          - { path: ^/admin, roles: [IS_AUTHENTICATED_FULLY, ROLE_CUSTOMER]   }
+         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+         - { path: ^/api/docs, roles: PUBLIC_ACCESS }
+         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/profile, roles: ROLE_USER }
 #         - { path: ^/api/(post|comment)/\d+$, roles: ROLE_USER }
 
