fixed admin CRUD controllers

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -8,6 +8,7 @@ api_platform:
         jsonopenapi: ['application/vnd.openapi+json']
         html: ['text/html']
     defaults:
+        pagination_items_per_page: 10
         stateless: true
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
@@ -16,3 +17,6 @@ api_platform:
             rfc_7807_compliant_errors: true
     event_listeners_backward_compatibility_layer: false
     keep_legacy_inflector: false
+    collection:
+        pagination:
+            page_parameter_name: _page
