--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -20,3 +20,8 @@ api_platform:
     collection:
         pagination:
             page_parameter_name: _page
+    swagger:
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
