added templates, bootstrap, added state providers and processors

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -55,7 +55,7 @@ security:
     access_control:
 #         - { path: ^/admin/users, roles: ROLE_SUPER_ADMIN }
          - { path: ^/admin/login, roles: PUBLIC_ACCESS }
-         - { path: ^/admin, roles: [IS_AUTHENTICATED_FULLY, ROLE_CUSTOMER]   }
+         - { path: ^/admin, roles: [IS_AUTHENTICATED_FULLY, ROLE_CEO]   }
          - { path: ^/api/login, roles: PUBLIC_ACCESS }
          - { path: ^/api/docs, roles: PUBLIC_ACCESS }
          - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
