--- a/.env
+++ b/.env
@@ -17,6 +17,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=
+SERVER_NAME=localhost
+CADDY_MERCURE_JWT_SECRET=!ChangeThisMercureHubJWTSecretKey!
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -26,6 +28,9 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
