--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -1,6 +1,8 @@
 # Production environment override
 services:
   php:
+    env_file:
+      - .env.local
     build:
       context: .
       target: frankenphp_prod
