--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -10,3 +10,4 @@ services:
       APP_SECRET: ${APP_SECRET}
       MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
       MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
+      FRANKENPHP_CONFIG:
