--- a/frankenphp/Caddyfile
+++ b/frankenphp/Caddyfile
@@ -13,7 +13,7 @@
 
 {$CADDY_EXTRA_CONFIG}
 
-{$SERVER_NAME:localhost} {
+{$SERVER_NAME:winker.com.ua} {
 	log {
 		# Redact the authorization query parameter that can be set by Mercure
 		format filter {
