added users endpoint, department endpoint, fixed yaml

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -56,6 +56,7 @@ security:
 #         - { path: ^/admin/users, roles: ROLE_SUPER_ADMIN }
          - { path: ^/admin/login, roles: PUBLIC_ACCESS }
          - { path: ^/admin, roles: [IS_AUTHENTICATED_FULLY, ROLE_CEO]   }
+         - { path: ^/api/login_check, roles: PUBLIC_ACCESS }
          - { path: ^/api/login, roles: PUBLIC_ACCESS }
          - { path: ^/api/docs, roles: PUBLIC_ACCESS }
          - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
