--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=
 SERVER_NAME=localhost
 CADDY_MERCURE_JWT_SECRET=!ChangeThisMercureHubJWTSecretKey!
