--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -2,7 +2,17 @@ api_platform:
     title: Winker API
     version: 1.0.0
     formats:
-        jsonld: ['application/ld+json']
+#        jsonld: ['application/ld+json']
+        json: [ 'application/json' ]
+        html: [ 'text/html' ]
+    patch_formats:
+#        multipart: [ 'multipart/form-data' ]
+        json: [ 'application/merge-patch+json' ]
+        jsonapi: [ 'application/vnd.api+json' ]
+    error_formats:
+        jsonproblem: [ 'application/problem+json' ]
+        jsonld: [ 'application/ld+json' ]
+        jsonapi: [ 'application/vnd.api+json' ]
     docs_formats:
         jsonld: ['application/ld+json']
         jsonopenapi: ['application/vnd.openapi+json']
