added user device token resource

--- a/.env
+++ b/.env
@@ -47,3 +47,4 @@ JWT_PASSPHRASE=
 #SIGNATURE_KEY='%kernel.project_dir%/config/jwt/signature.jwk'
 #SIGNATURE_KEYSET='%kernel.project_dir%/config/jwt/signature.jwkset'
 ###< lexik/jwt-authentication-bundle ###
+GOOGLE_APPLICATION_CREDENTIALS=
