--- a/config/packages/firebase.yaml
+++ b/config/packages/firebase.yaml
@@ -1,4 +1,4 @@
 kreait_firebase:
     projects:
         my_project:
-            credentials: '%kernel.project_dir%/config/winker_credentials.json'
+            credentials: '%env(json:GOOGLE_APPLICATION_CREDENTIALS)%'
