add patch endpoint to task

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -7,8 +7,8 @@ api_platform:
         html: [ 'text/html' ]
     patch_formats:
 #        multipart: [ 'multipart/form-data' ]
-        json: [ 'application/merge-patch+json' ]
-        jsonapi: [ 'application/vnd.api+json' ]
+        json: [ 'application/json' ]
+#        jsonapi: [ 'application/vnd.api+json' ]
     error_formats:
         jsonproblem: [ 'application/problem+json' ]
         jsonld: [ 'application/ld+json' ]
