--- a/.env.prod
+++ b/.env.prod
@@ -17,7 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=prod
 APP_SECRET=
-SERVER_NAME=localhost
+SERVER_NAME=winker
 CADDY_MERCURE_JWT_SECRET=SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=
 ###< symfony/framework-bundle ###
 
@@ -52,9 +52,9 @@ GOOGLE_APPLICATION_CREDENTIALS=
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
-MERCURE_URL=https://winker.com.ua/.well-known/mercure
+MERCURE_URL=https://example.com/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
-MERCURE_PUBLIC_URL=https://winker.com.ua/.well-known/mercure
+MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
 # The secret used to sign the JWTs
 MERCURE_JWT_SECRET="SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A="
 ###< symfony/mercure-bundle ###
