--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -2,7 +2,7 @@
 services:
   php:
     env_file:
-      - .env.local
+      - .env.prod
     build:
       context: .
       target: frankenphp_prod
