--- a/compose.yaml
+++ b/compose.yaml
@@ -4,16 +4,16 @@ services:
     restart: unless-stopped
     environment:
       SERVER_NAME: ${SERVER_NAME:-localhost}, php:80
-      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
       TRUSTED_PROXIES: ${TRUSTED_PROXIES:-127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16}
       TRUSTED_HOSTS: ^${SERVER_NAME:-winker.com.ua|localhost}|php$$
       # Run "composer require symfony/orm-pack" to install and configure Doctrine ORM
       DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-root}@database:5432/${POSTGRES_DB:-winker}?serverVersion=${POSTGRES_VERSION:-15}&charset=${POSTGRES_CHARSET:-utf8}
       # Run "composer require symfony/mercure-bundle" to install and configure the Mercure integration
-      MERCURE_URL: ${CADDY_MERCURE_URL:-http://php/.well-known/mercure}
-      MERCURE_PUBLIC_URL: https://${SERVER_NAME:-localhost}/.well-known/mercure
-      MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+      MERCURE_URL: ${MERCURE_URL:-http://php/.well-known/mercure}
+      MERCURE_PUBLIC_URL: https://${MERCURE_PUBLIC_URL:-winker.com.ua}/.well-known/mercure
+      MERCURE_JWT_SECRET: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
       # The two next lines can be removed after initial installation
       SYMFONY_VERSION: ${SYMFONY_VERSION:-}
       STABILITY: ${STABILITY:-stable}
@@ -36,6 +36,17 @@ services:
 
 # Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
 ###> symfony/mercure-bundle ###
+  mercure:
+    image: dunglas/mercure
+    environment:
+      # Секрети JWT для публікації та підписки
+      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
+      # CORS та дозволені джерела для публікації
+      MERCURE_CORS_ALLOWED_ORIGINS: 'https://winker.com.ua'
+      MERCURE_PUBLISH_ALLOWED_ORIGINS: ${MERCURE_PUBLISH_ALLOWED_ORIGINS:-https://winker.com.ua|http://localhost}
+    ports:
+      - "3000:80" # Публічний порт для доступу до Mercure
 ###< symfony/mercure-bundle ###
 
 ###> doctrine/doctrine-bundle ###
