--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/expression-language": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/mercure-bundle": "^0.3.9",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "7.0.*",
         "symfony/property-info": "7.0.*",
