--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@
 APP_ENV=prod
 APP_SECRET=
 SERVER_NAME=localhost
-CADDY_MERCURE_JWT_SECRET=SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=
+CADDY_MERCURE_JWT_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -52,7 +52,7 @@ GOOGLE_APPLICATION_CREDENTIALS=
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
-MERCURE_URL=https://winker.com.ua/.well-known/mercure
+MERCURE_URL=http://mercure/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
 MERCURE_PUBLIC_URL=https://winker.com.ua/.well-known/mercure
 # The secret used to sign the JWTs
