--- a/.env.prod
+++ b/.env.prod
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=prod
-APP_SECRET=
+APP_SECRET=SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=
 SERVER_NAME=winker
 CADDY_MERCURE_JWT_SECRET=SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=
 ###< symfony/framework-bundle ###
@@ -47,14 +47,14 @@ JWT_PASSPHRASE=
 #SIGNATURE_KEY='%kernel.project_dir%/config/jwt/signature.jwk'
 #SIGNATURE_KEYSET='%kernel.project_dir%/config/jwt/signature.jwkset'
 ###< lexik/jwt-authentication-bundle ###
-GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_APPLICATION_CREDENTIALS=''
 
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
-MERCURE_URL=https://example.com/.well-known/mercure
+MERCURE_URL=http://mercure/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
-MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
+MERCURE_PUBLIC_URL=https://winker.com.ua/.well-known/mercure
 # The secret used to sign the JWTs
 MERCURE_JWT_SECRET="SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A="
 ###< symfony/mercure-bundle ###
