--- a/compose.yaml
+++ b/compose.yaml
@@ -46,7 +46,7 @@ services:
       MERCURE_CORS_ALLOWED_ORIGINS: 'https://winker.com.ua'
       MERCURE_PUBLISH_ALLOWED_ORIGINS: ${MERCURE_PUBLISH_ALLOWED_ORIGINS:-https://winker.com.ua|http://localhost}
       ALLOW_ANONYMOUS: 1 # Дозволяє анонімний доступ (за потреби)
-      SERVER_NAME: '' # Залишити порожнім, щоб вимкнути автоматичне перенаправлення HTTP на HTTPS
+      SERVER_NAME: ':80' # щоб вимкнути автоматичне перенаправлення HTTP на HTTPS
     ports:
       - "3000:80" # Публічний порт для доступу до Mercure
 ###< symfony/mercure-bundle ###
