--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -8,6 +8,7 @@ services:
       target: frankenphp_prod
     environment:
       APP_SECRET: ${APP_SECRET}
+      SERVER_NAME: ${SERVER_NAME}
       MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET}
       MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET}
       FRANKENPHP_CONFIG:
