--- a/.env.prod
+++ b/.env.prod
@@ -17,7 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=prod
 APP_SECRET=SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=
-SERVER_NAME=winker.com.ua
+SERVER_NAME=winker
 CADDY_MERCURE_JWT_SECRET=SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=
 ###< symfony/framework-bundle ###
 
