--- a/.env
+++ b/.env
@@ -60,3 +60,14 @@ MERCURE_JWT_SECRET="SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A="
 ###< symfony/mercure-bundle ###
 MERCURE_CORS_ALLOWED_ORIGINS=https://winker.com.ua
 MERCURE_PUBLISH_ALLOWED_ORIGINS=https://winker.com.ua
+
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_USER=admin
+MESSENGER_TRANSPORT_PASSWORD=winker_Nubi%a_2525
+MESSENGER_TRANSPORT_DSN=amqp://admin:winker_NubiRa_2525@rabbitmq:5672/%2f
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
