--- a/compose.yaml
+++ b/compose.yaml
@@ -61,11 +61,24 @@ services:
       # You should definitely change the password in production
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-root}
       POSTGRES_USER: ${POSTGRES_USER:-app}
+      MESSENGER_TRANSPORT_DSN: ${MESSENGER_TRANSPORT_DSN}
     volumes:
       - database_data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672" # AMQP порт для додатків
+      - "15672:15672" # Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: winker_Nubi%a_2525
+      RABBITMQ_ERLANG_COOKIE: 'SeDM+L3BbxUkbNprZ2'
+      RABBITMQ_DEFAULT_VHOST: /
 
 volumes:
   caddy_data:
