--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "kreait/firebase-bundle": "^5.3",
         "lexik/jwt-authentication-bundle": "^2.20",
         "nelmio/cors-bundle": "^2.4",
+        "php-amqplib/php-amqplib": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "runtime/frankenphp-symfony": "dev-main",
+        "symfony/amqp-messenger": "^5.4",
         "symfony/asset": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
@@ -27,14 +29,15 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/mercure-bundle": "^0.3.9",
+        "symfony/messenger": "^6.4",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "7.0.*",
         "symfony/property-info": "7.0.*",
-        "symfony/runtime": "7.0.*",
+        "symfony/runtime": "7.1.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/serializer": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
-        "symfony/validator": "7.0.*",
+        "symfony/validator": "7.1.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "7.0.*",
         "symfonycasts/verify-email-bundle": "^1.15",
