--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     mercure_secret: '%env(MERCURE_JWT_SECRET)%'
+    messenger_user: '%env(MESSENGER_TRANSPORT_USER)%'
+    messenger_pass: '%env(MESSENGER_TRANSPORT_PASSWORD)%'
 services:
     # default configuration for services in *this* file
     _defaults:
