--- a/compose.yaml
+++ b/compose.yaml
@@ -36,19 +36,19 @@ services:
 
 # Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
 ###> symfony/mercure-bundle ###
-  mercure:
-    image: dunglas/mercure
-    environment:
-      # Секрети JWT для публікації та підписки
-      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
-      # CORS та дозволені джерела для публікації
-      MERCURE_CORS_ALLOWED_ORIGINS: 'https://winker.com.ua'
-      MERCURE_PUBLISH_ALLOWED_ORIGINS: ${MERCURE_PUBLISH_ALLOWED_ORIGINS:-https://winker.com.ua|http://localhost}
-      ALLOW_ANONYMOUS: 1 # Дозволяє анонімний доступ (за потреби)
-      SERVER_NAME: ':80' # щоб вимкнути автоматичне перенаправлення HTTP на HTTPS
-    ports:
-      - "3000:80" # Публічний порт для доступу до Mercure
+#  mercure:
+#    image: dunglas/mercure
+#    environment:
+#      # Секрети JWT для публікації та підписки
+#      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
+#      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
+#      # CORS та дозволені джерела для публікації
+#      MERCURE_CORS_ALLOWED_ORIGINS: 'https://winker.com.ua'
+#      MERCURE_PUBLISH_ALLOWED_ORIGINS: ${MERCURE_PUBLISH_ALLOWED_ORIGINS:-https://winker.com.ua|http://localhost}
+#      ALLOW_ANONYMOUS: 1 # Дозволяє анонімний доступ (за потреби)
+#      SERVER_NAME: ':80' # щоб вимкнути автоматичне перенаправлення HTTP на HTTPS
+#    ports:
+#      - "3000:80" # Публічний порт для доступу до Mercure
 ###< symfony/mercure-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -68,20 +68,43 @@ services:
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
 
-  rabbitmq:
-    image: rabbitmq:3-management
-    container_name: rabbitmq
-    ports:
-      - "5672:5672" # AMQP порт для додатків
-      - "15672:15672" # Management UI
-    environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: winker_Nubi%a_2525
-      RABBITMQ_ERLANG_COOKIE: 'SeDM+L3BbxUkbNprZ2'
-      RABBITMQ_DEFAULT_VHOST: /
-      RABBITMQ_HEARTBEAT: 10
-      RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbit tcp_listen_options [{keepalive,true}]"
+#  rabbitmq:
+#    image: rabbitmq:3-management
+#    container_name: rabbitmq
+#    ports:
+#      - "5672:5672" # AMQP порт для додатків
+#      - "15672:15672" # Management UI
+#    environment:
+#      RABBITMQ_DEFAULT_USER: admin
+#      RABBITMQ_DEFAULT_PASS: winker_Nubi%a_2525
+#      RABBITMQ_ERLANG_COOKIE: 'SeDM+L3BbxUkbNprZ2'
+#      RABBITMQ_DEFAULT_VHOST: /
+#      RABBITMQ_HEARTBEAT: 10
+#      RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbit tcp_listen_options [{keepalive,true}]"
       
+      
+  zookeeper:
+      image: confluentinc/cp-zookeeper:latest
+      container_name: zookeeper
+      restart: unless-stopped
+      environment:
+        ZOOKEEPER_CLIENT_PORT: 2181
+        ZOOKEEPER_TICK_TIME: 2000
+  
+
+  kafka:
+      image: confluentinc/cp-kafka:latest
+      container_name: kafka
+      restart: unless-stopped
+      ports:
+        - "9092:9092"
+      environment:
+        KAFKA_BROKER_ID: 1
+        KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      depends_on:
+        - zookeeper
 
 volumes:
   caddy_data:
