--- a/compose.yaml
+++ b/compose.yaml
@@ -97,12 +97,20 @@ services:
       container_name: kafka
       restart: unless-stopped
       ports:
+        - "9093:9093"
         - "9092:9092"
       environment:
         KAFKA_BROKER_ID: 1
         KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9093,PLAINTEXT_HOST://64.226.69.60:9092
+        KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093, PLAINTEXT_HOST://0.0.0.0:9092
+        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+        KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_HOST
         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+        KAFKA_CREATE_TOPICS: "user_notifications:1:1"  # Додаємо авто-створення топіка
+        KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"  # Дозволяє створювати нові топіки на льоту
+        KAFKA_LOG_RETENTION_HOURS: 168  # 7 днів збереження повідомлень
+
       depends_on:
         - zookeeper
 
