--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,8 @@ services:
   php:
     image: ${IMAGES_PREFIX:-}app-php
     restart: unless-stopped
+    networks:
+      - default
     environment:
       SERVER_NAME: ${SERVER_NAME:-winker.com.ua}, php:80
       MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-SeDM+L3BbxUkbNprZ2/oaSdZ61ANHjt0lOyv4VQSd+A=}
@@ -66,6 +68,8 @@ services:
       - database_data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
+    networks:
+      - default
 ###< doctrine/doctrine-bundle ###
 
 #  rabbitmq:
@@ -90,30 +94,87 @@ services:
       environment:
         ZOOKEEPER_CLIENT_PORT: 2181
         ZOOKEEPER_TICK_TIME: 2000
+        ZOOKEEPER_SYNC_LIMIT: 2    # Додаємо параметр syncLimit
+        ZOOKEEPER_INIT_LIMIT: 5    # Додаємо параметр initLimit
+      networks:
+        - default
   
 
+#  kafka:
+#      image: confluentinc/cp-kafka:latest
+#      container_name: kafka
+#      restart: unless-stopped
+#      ports:
+#        - "9093:9093"
+#        - "9092:9092"
+#      environment:
+#        KAFKA_BROKER_ID: 1
+#        KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+#        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9093,PLAINTEXT_HOST://64.226.69.60:9092
+#        KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093, PLAINTEXT_HOST://0.0.0.0:9092
+#        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+#        KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_HOST
+#        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#        KAFKA_CREATE_TOPICS: "user_notifications:1:1"  # Додаємо авто-створення топіка
+#        KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"  # Дозволяє створювати нові топіки на льоту
+#        KAFKA_LOG_RETENTION_HOURS: 168  # 7 днів збереження повідомлень
   kafka:
-      image: confluentinc/cp-kafka:latest
-      container_name: kafka
-      restart: unless-stopped
-      ports:
-        - "9093:9093"
-        - "9092:9092"
-      environment:
-        KAFKA_BROKER_ID: 1
-        KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9093,PLAINTEXT_HOST://64.226.69.60:9092
-        KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093, PLAINTEXT_HOST://0.0.0.0:9092
-        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-        KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_HOST
-        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-        KAFKA_CREATE_TOPICS: "user_notifications:1:1"  # Додаємо авто-створення топіка
-        KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"  # Дозволяє створювати нові топіки на льоту
-        KAFKA_LOG_RETENTION_HOURS: 168  # 7 днів збереження повідомлень
-
-      depends_on:
-        - zookeeper
-
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_ZOOKEEPER_SASL_ENABLED: FALSE
+      # Внутрішнє з'єднання - без автентифікації
+      # Зовнішнє з'єднання - з SASL автентифікацією
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://64.226.69.60:29092
+      
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      
+      
+      # SASL налаштування тільки для зовнішнього слухача
+#      KAFKA_SASL_ENABLED_MECHANISMS: PLAIN
+#      KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL: PLAINTEXT
+#      KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL: PLAIN
+      
+      
+#      KAFKA_ZOOKEEPER_SET_ACL: FALSE
+#      KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/kafka_jaas.conf -Dzookeeper.sasl.client=false"
+#      KAFKA_ZOOKEEPER_SASL_ENABLED: "true"
+#      KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/kafka_jaas.conf -Dzookeeper.sasl.client=true"
+      
+#      KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/kafka_jaas.conf"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_LOG_RETENTION_HOURS: 24
+#      KAFKA_HEAP_OPTS: "-Xmx1G -Xms512M"
+    volumes:
+      - ./kafka_jaas.conf:/etc/kafka/kafka_jaas.conf
+    depends_on:
+      - zookeeper
+    networks:
+      - default
+  
+  kafdrop:
+    image: obsidiandynamics/kafdrop
+    restart: "no"
+    environment:
+      KAFKA_BROKERCONNECT: "kafka:9092"
+      JVM_OPTS: "-Xms128M -Xmx512M -Xss256K"
+#      SPRING_SECURITY_USER_NAME: "admin"
+#      SPRING_SECURITY_USER_PASSWORD: "12081980"
+#      CMD_ARGS: "--protobufdesc.directory=/var/protobuf_desc --server.servlet.context-path=/ --kafka.brokerConnect=kafka:9092 --server.port=9000 --security.basic.enabled=true --security.user.name=admin --security.user.password=12081980"
+#      JVM_OPTS: "-Xms16M -Xmx512M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
+    ports:
+      - 9900:9000
+    depends_on:
+      - kafka
+    networks:
+      - default
+  
 volumes:
   caddy_data:
   caddy_config:
@@ -123,3 +184,6 @@ volumes:
 ###> doctrine/doctrine-bundle ###
   database_data:
 ###< doctrine/doctrine-bundle ###
+networks:
+  default:
+    name: winker_default
