remove volume and unnecessary configs

--- a/compose.yaml
+++ b/compose.yaml
@@ -98,7 +98,11 @@ services:
         ZOOKEEPER_INIT_LIMIT: 5    # Додаємо параметр initLimit
       networks:
         - default
-  
+      healthcheck:
+        test: [ "CMD", "echo", "ruok", "|", "nc", "localhost", "2181" ]
+        interval: 30s
+        timeout: 10s
+        retries: 5
 
 #  kafka:
 #      image: confluentinc/cp-kafka:latest
@@ -120,6 +124,7 @@ services:
 #        KAFKA_LOG_RETENTION_HOURS: 168  # 7 днів збереження повідомлень
   kafka:
     image: confluentinc/cp-kafka:latest
+    restart: unless-stopped
     ports:
       - "9092:9092"
       - "29092:29092"
@@ -133,6 +138,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://64.226.69.60:29092
       
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_HEAP_OPTS: "-Xmx1G -Xms1G"
       
       
       # SASL налаштування тільки для зовнішнього слухача
