--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,6 +44,7 @@ security:
                 enable_csrf: true
             logout:
                 path: app_logout
+                target: /
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
